fix_align

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em; ==0.32px; */
 }
-ul {list-style-type: none;
+ul {
+    list-style-type: none;
     font-style: normal;
 } /*убрать маркеры и курсив всем спискам ul*/
 a {text-decoration: none;} /*убрать подчеркивание всем ссылкам*/
@@ -20,7 +21,7 @@ h1 {
 }
 h2 {      
     color:  #2E2F42;
-    text-align: center;    
+    /* text-align: center;     */
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
@@ -157,7 +158,7 @@ color: #434455;
 .team-title {
  font-size: 36px;
  line-height: 1.11; 
- text-align: center; 
+ /* text-align: center;  */
  letter-spacing: 0.02em; 
  text-transform: capitalize; 
  color:#2e2f42;
